crates/hir-ty/tests/snapshots/jls_access__same_package_package_private.snap
---
source: crates/hir-ty/tests/jls_access.rs
expression: out
---
FILE /src/com/example/Same.java:
package com.example;

class A {
    void pkg() {}
    int field;
}

class B {
    void f() {
        A a = new A();
        a.pkg();
        int x = a.field;
    }
}
